--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
+    "fs": "0.0.1-security",
+    "glob": "^7.2.0",
     "http-errors": "~1.6.3",
     "imagemagick": "^0.1.3",
     "jade": "~1.11.0",
